harbor/harbor-core_NetworkPolicy_harbor.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: core
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: harbor
    app.kubernetes.io/version: 2.13.2
    helm.sh/chart: harbor-26.8.3
  name: harbor-core
  namespace: harbor
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 8080
    - port: 8001
  podSelector:
    matchLabels:
      app.kubernetes.io/component: core
      app.kubernetes.io/instance: harbor
      app.kubernetes.io/name: harbor
  policyTypes:
  - Ingress
  - Egress
